# ralph-stack

./: LICENSE  README.md  SPIKE-NOTES.md  install.sh  pyproject.toml
docs/superpowers/plans/completed/: plan_2026-04-19-ralph-stack-init.md
docs/superpowers/specs/: spec_2026-04-19-ralph-orchestrator-bugs.md  spec_2026-04-19-ralph-stack-init-design.md
scripts/: claude-ralph-wrapper.sh  dry-run.sh
skills/ralph/: SKILL.md
skills/ralph-review/: README.md  SKILL.md
src/ralph_stack/: cli.py  config.py  debrief.py  detector.py  errors.py  escalation.py  guardrails.py  orchestrator.py  paths.py  report.py  runner.py  setup.py  state.py  transcript.py  transcript_source.py
tests/: conftest.py  test_cli.py  test_config.py  test_debrief.py  test_detector.py  test_errors.py  test_escalation.py  test_guardrails.py  test_integration_detector.py  test_orchestrator.py  test_paths.py  test_report.py  test_runner.py  test_setup.py  test_state.py  test_transcript.py  test_transcript_source.py  test_wrapper_script.py
tests/fixtures/: full_stuck_run.jsonl  transcript_full_run.jsonl  transcript_two_iterations.jsonl
