[project]
name = "ralph-stack"
version = "0.1.0"
description = "Opus-only ralph loop with stuck-escalation to Codex and D+ guardrails."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ralph-stack = "ralph_stack.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
